syntax = "proto3";

package workspace;

// Represents a full document state for synchronization.
message SyncDocumentProto {
    string doc_id = 1;
    string content = 2;
    uint64 version = 3;
}

// Defines an insertion operation.
message InsertOp {
    uint32 index = 1;
    string text = 2;
    string client_id = 3;
    uint64 client_version = 4;
}

// Defines a deletion operation.
message DeleteOp {
    uint32 start = 1;
    uint32 end = 2;
    string client_id = 3;
    uint64 client_version = 4;
}

// Defines a replacement operation (delete then insert).
message ReplaceOp {
    uint32 start = 1;
    uint32 end = 2;
    string text = 3;
    string client_id = 4;
    uint64 client_version = 5;
}

message Noop {
    string client_id = 1;
    uint64 client_version = 2;
}
// Represents a single collaborative editing operation.
message OperationProto {
    uint64 op_id = 1;

    oneof kind {
        InsertOp insert = 2;
        DeleteOp delete = 3;
        ReplaceOp replace = 4;
        Noop noop = 5;
    }

    // Metadata related to the operation's source and state.
    string doc_id = 6;
    string client_id = 7;
    uint64 client_version = 8;
    uint64 server_version = 9;
    string new_content = 10;
}
